--- a/themes/purple.css
+++ b/themes/purple.css
@@ -75,7 +75,7 @@ input {
     z-index: 10000;
     opacity: 1;
     transition: opacity 0.5s ease;
-    cursor: none;
+    cursor: default;
     font-family: "SUSE Mono" !important;
 }
 
@@ -123,7 +123,6 @@ input {
     display: flex;
     align-items: center;
     gap: 1rem;
-    cursor: none;
 }
 
 .boot-option i {
